kubernetes/catalog/nextcloud/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: nextcloud
          port: 443
  tls:
    secretName: int-rlservers-com-tls
